<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github</groupId>
    <artifactId>criteriasearchhelper</artifactId>
    <version>0.0.42-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>criteria search helper</name>
    <description>Criteria builder helper for dynamic sql queries</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.3.4.RELEASE</version>
        <relativePath /> <!-- lookup parent from repository -->
    </parent>

    <scm>
        <connection>scm:git:https://github.com/Merdoc97/criteria-builder-helper.git</connection>
    </scm>

    <modules>
        <module>searcher</module>
        <module>searcher-starter</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>11</java.version>
        <full-artifact-name>target/${build.finalName}.jar</full-artifact-name>
        <hikari-pool-version>2.4.5</hikari-pool-version>
        <postgres-driver-version>42.0.0</postgres-driver-version>
        <jsoup-version>1.9.2</jsoup-version>
        <flyway-version>4.1.1</flyway-version>
        <release-plugin-version>2.5.3</release-plugin-version>
        <serfire-plugin-version>2.18.1</serfire-plugin-version>
        <compile-plugin-version>2.5.1</compile-plugin-version>
        <javax-el-api.version>3.0.1-b08</javax-el-api.version>
        <hibernate.version>5.3.1.Final</hibernate.version>
        <testcontainers.version>1.14.3</testcontainers.version>
    </properties>


    <dependencies>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>postgresql</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-envers</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-hibernate5</artifactId>
            <scope>provided</scope>
        </dependency>
        <!--getter and setter config-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.junit.vintage</groupId>
                    <artifactId>junit-vintage-engine</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <build>

    </build>

</project>
